# sparks

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux-build.yml
assets/: CMakeLists.txt
assets/meshes/: CMakeLists.txt
assets/scenes/: CMakeLists.txt  README.md  base.xml  cornell.xml  cornell_lucy.xml  cornell_lucy_bunny.xml  cornell_my.xml  cornell_specular.xml  matball.xml
assets/sobol/: CMakeLists.txt  new-joe-kuo-7.21201
assets/textures/: CMakeLists.txt
src/: CMakeLists.txt
src/sparks/: CMakeLists.txt  main.cpp  sparks.h
src/sparks/app/: CMakeLists.txt  app.cpp  app.h  app_settings.h  entity_device_asset.h  entity_uniform_object.h  global_uniform_object.h  object_info.h  object_sampler_info.h
src/sparks/assets/: CMakeLists.txt  aabb.cpp  aabb.h  accelerated_mesh.cpp  accelerated_mesh.h  assets.cpp  camera.cpp  camera.h  entity.cpp  entity.h  hit_record.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  sobol.cpp  sobol.h  texture.cpp  texture.h  util.cpp  util.h  vertex.h
src/sparks/main/: CMakeLists.txt  main.cpp
src/sparks/renderer/: path_tracer.cpp  path_tracer.h  renderer.cpp  renderer.h  renderer_settings.h  util.cpp  util.h
src/sparks/shaders/: CMakeLists.txt  bsdf.glsl  constants.glsl  defs.glsl  direct_lighting.glsl  envmap.frag  envmap.glsl  envmap.vert  gui.vert  hit_record.glsl  host_result.frag  host_result.vert  material.glsl  mis.glsl  path_tracing.rchit  path_tracing.rgen  path_tracing.rmiss  postproc.frag  postproc.vert  principled_bsdf.glsl  principled_diffuse.glsl  principled_microfacet.glsl  principled_microfacet_clearcoat.glsl  principled_microfacet_fresnel.glsl  principled_microfacet_refraction.glsl  principled_sheen.glsl  principled_util.glsl  random.glsl  ray_payload.glsl  sample_texture.glsl  scene_view.frag  scene_view.vert  shadow_ray.glsl  trace_ray.glsl  uniform_objects.glsl  vertex.glsl
src/sparks/sparks/: CMakeLists.txt  main.cpp
src/sparks/util/: CMakeLists.txt  util.cpp  util.h
